fix(Data): fix LocalizedResources for ArgumentCannotBeADateInThePast

--- a/src/Data/Neuroglia.Data/Neuroglia.Data.csproj
+++ b/src/Data/Neuroglia.Data/Neuroglia.Data.csproj
@@ -40,4 +40,9 @@
   <ItemGroup>
     <Folder Include="Properties\" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\LocalizedResources.resx">
+      <Generator></Generator>
+    </EmbeddedResource>
+  </ItemGroup>
 </Project>
