--- a/.github/workflows/publish-only.yml
+++ b/.github/workflows/publish-only.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
 
 env:
-  SOLUTION: ./src/Neuroglia Framework.sln
+  SOLUTION: ./Neuroglia Framework.sln
 
 jobs:
   build:
