ci(Tests): trying to isolate problematic repository test [skip hint]

--- a/.github/workflows/test-dotnet.yml
+++ b/.github/workflows/test-dotnet.yml
@@ -51,7 +51,7 @@ jobs:
       - name: Test Data.Repositories.DistributedCacheRepositoryTests
         run: dotnet test "${{ env.SOLUTION }}" --no-restore --filter "FullyQualifiedName~DistributedCacheRepositoryTests"
 
-      - name: Test Data.Repositories
+      - name: Test Data.Repositories.EFCoreRepositoryTests
         run: dotnet test "${{ env.SOLUTION }}" --no-restore --filter "FullyQualifiedName~EFCoreRepositoryTests"
 
       - name: Test Data.Repositories.EventSourcingRepositoryTests
