fix(Tests): fixed wait strategy for test containers [skip hint]
Notes: also isolated repositories tests in the CI/CD to prevent them from running forever

--- a/.github/workflows/test-dotnet.yml
+++ b/.github/workflows/test-dotnet.yml
@@ -51,6 +51,18 @@ jobs:
       #- name: Test Data.Repositories
       #  run: dotnet test "${{ env.SOLUTION }}" --no-restore --filter "FullyQualifiedName~Data.Repositories"
 
+      - name: Test Data.Repositories.DistributedCacheRepositoryTests
+        run: dotnet test "${{ env.SOLUTION }}" --no-restore --filter "FullyQualifiedName~DistributedCacheRepositoryTests"
+
+      - name: Test Data.Repositories.EFCoreRepositoryTests
+        run: dotnet test "${{ env.SOLUTION }}" --no-restore --filter "FullyQualifiedName~EFCoreRepositoryTests"
+
+      - name: Test Data.Repositories.EventSourcingRepositoryTests
+        run: dotnet test "${{ env.SOLUTION }}" --no-restore --filter "FullyQualifiedName~EventSourcingRepositoryTests"
+
+      - name: Test Data.Repositories.MongoRepositoryTests
+        run: dotnet test "${{ env.SOLUTION }}" --no-restore --filter "FullyQualifiedName~MongoRepositoryTests"
+
       - name: Test Data.SchemaRegistry
         run: dotnet test "${{ env.SOLUTION }}" --no-restore --filter "FullyQualifiedName~Data.SchemaRegistry"
 
