--- a/src/Neuroglia.Serialization.Abstractions/Neuroglia.Serialization.Abstractions.csproj
+++ b/src/Neuroglia.Serialization.Abstractions/Neuroglia.Serialization.Abstractions.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="7.0.1" />
   </ItemGroup>
 
 </Project>
