--- a/src/Neuroglia.Data.EventSourcing.MemoryCache/Neuroglia.Data.EventSourcing.MemoryCache.csproj
+++ b/src/Neuroglia.Data.EventSourcing.MemoryCache/Neuroglia.Data.EventSourcing.MemoryCache.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="7.0.0" />
     <PackageReference Include="System.Reactive" Version="6.0.0" />
   </ItemGroup>
 
